# rust-book-samples

adder/src/: main.rs
block_chain_rust/: Cargo.toml
minigrep/: Cargo.toml  output.txt
minigrep/src/: lib.rs  main.rs
random_secret/: Cargo.toml
random_secret/src/: main.rs
rectangles/src/: main.rs
rust_closure/: Cargo.toml
rust_closure/src/: main.rs
rust_collections/: Cargo.toml
rust_collections/src/: main.rs
rust_concurrency/: Cargo.toml
rust_concurrency/src/: main.rs
rust_control_flow/: Cargo.toml
rust_control_flow/src/: main.rs
rust_crates/: Cargo.toml
rust_enums/: Cargo.toml
rust_enums/src/: main.rs
rust_exception/: Cargo.toml
rust_exception/src/: main.rs
rust_fn/src/: main.rs
rust_functions/src/: main.rs
rust_generics/: Cargo.toml
rust_generics/src/: main.rs
rust_http_client/: Cargo.toml
rust_http_client/src/: main.rs
rust_iterators/src/: lib.rs  main.rs
rust_lifetimes/src/: main.rs
rust_lists/: Cargo.toml
rust_lists/src/: first.rs
rust_ownership/: Cargo.toml
rust_ownership/src/: main.rs
rust_references/: Cargo.toml
rust_references/src/: main.rs
rust_smart_pointer/: Cargo.toml
rust_smart_pointer/src/: main.rs
rust_struct/: Cargo.toml
rust_struct/src/: main.rs
rust_struct_methods/: Cargo.toml
rust_struct_methods/src/: main.rs
rust_tests/: Cargo.toml
rust_tests/src/: lib.rs
rust_tests/tests/: intergration_test.rs
rust_variables/: Cargo.toml
rust_variables/src/: main.rs
rust_workspace/: Cargo.toml
rust_workspace/sub/: Cargo.toml
todo-cli/: Cargo.toml  db.json  db.txt
(+6 files in other folders)
