[package]
name = "rust_http_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json", "stream"] }
error-chain = "0.12.4"
tempfile = "3.1.0"
tokio = { version = "0.2", features = ["full"] }